# rust-for-node-developers

./: .gitignore  README.md
hello-world/: README.md
hello-world/rust/: hello_world
http-requests/: README.md  REAMDE.md
http-requests/node/: package-lock.json  package.json
http-requests/node/src/: index.ts
http-requests/rust/: Cargo.toml
http-requests/rust/src/: main.rs
package-manager/: README.md
package-manager/dependencies/node/: package-lock.json  package.json
package-manager/dependencies/node/src/: index.ts
package-manager/dependencies/rust/: Cargo.toml
package-manager/dependencies/rust/src/: main.rs
package-manager/meta-data/node/: npm-shrinkwrap.json  package-lock.json  package.json
package-manager/meta-data/rust/: Cargo.toml
package-manager/publishing/node/: README.md  package-lock.json  package.json
package-manager/publishing/node/src/: index.ts
package-manager/publishing/rust/: Cargo.toml  README.md
package-manager/publishing/rust/src/: lib.rs
parse-json/: README.md
parse-json/node/: package-lock.json  package.json
parse-json/node/src/: index.ts
parse-json/rust/: Cargo.toml
parse-json/rust/src/: main.rs
read-files/: README.md
read-files/node/: package-lock.json  package.json  tsconfig.json
read-files/node/src/: index.ts
read-files/rust/: Cargo.toml
read-files/rust/src/: main.rs
setup/: README.md
write-files/: README.md
write-files/node/: package.json  typings.json
write-files/node/src/: index.ts  tsconfig.json
write-files/rust/: Cargo.toml
write-files/rust/src/: main.rs
